--- a/concise-manager/build.gradle
+++ b/concise-manager/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     compile("org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.1")
     compile ('org.quartz-scheduler:quartz:2.3.0')
 
-    compile project(":concis-core")
+    compile project(":concise-core")
 
 
     testImplementation('org.springframework.boot:spring-boot-starter-test')
